--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-TELEGRAM_BOT_TOKEN=REDACTED_TELEGRAM_BOT_TOKEN
-TELEGRAM_CHAT_ID=-1001234567890
+# Required
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
+
+# Safety switches
+MAX_POSTS_PER_RUN=5
+DRY_RUN=true
+AI_ENABLED=false
