feat: add 24/7 polling and persisted URL dedup with SQLite

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHAT_ID=
 
 # Safety switches
-MAX_POSTS_PER_RUN=5
+MAX_POSTS_PER_RUN=1
 DRY_RUN=true
 AI_ENABLED=false
+
+# Polling (24/7 mode)
+POLL_INTERVAL_SECONDS=60
