fix: updating the formatter + config + .env.example

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ AI_ENABLED=false
 
 # Polling (24/7 mode)
 POLL_INTERVAL_SECONDS=60
+
+# Warm start: mark current RSS backlog as seen
+INIT_SKIP_EXISTING=true
+
+# During warm start, optionally post/preview the latest item (0/1)
+INIT_POST_LATEST=true
