feat: add dedup dev controls and reset options

--- a/.env.example
+++ b/.env.example
@@ -5,13 +5,26 @@ TELEGRAM_CHAT_ID=
 # Safety switches
 MAX_POSTS_PER_RUN=1
 DRY_RUN=true
-AI_ENABLED=false
 
 # Polling (24/7 mode)
 POLL_INTERVAL_SECONDS=60
 
-# Warm start: mark current RSS backlog as seen
-INIT_SKIP_EXISTING=true
+# Warm start (one-time)
+INIT_SKIP_EXISTING=false
+INIT_POST_LATEST=false
 
-# During warm start, optionally post/preview the latest item (0/1)
-INIT_POST_LATEST=true
+# Dedup storage (dev/testing) - DEDUP_DB_PATH=data/seen_test.sqlite3
+DEDUP_DB_PATH=data/seen.sqlite3
+# For local testing: reset dedup DB on start (DANGEROUS in prod)
+RESET_DEDUP_ON_START=false
+# In dry-run, whether to mark items as seen (set false to re-print the same candidate each cycle)
+DRY_RUN_MARK_SEEN=true
+
+# AI
+AI_ENABLED=false
+AI_PROVIDER=gemini
+CHANNEL_LANGUAGE=uk
+
+# Gemini
+GEMINI_API_KEY=
+GEMINI_MODEL=gemini-2.5-flash
